--- a/components/bubbles/styles.css
+++ b/components/bubbles/styles.css
@@ -1,4 +1,3 @@
-/* @import url(https://cdn.jsdelivr.net/gh/andrewh0/okcss@1/dist/ok.min.css); */
 @import url("https://rsms.me/inter/inter.css");
 
 /* https://www.joshwcomeau.com/shadow-palette/ */
@@ -16,7 +15,7 @@
 
 html,
 body,
-#__next {
+#root {
   width: 100%;
   height: 100%;
   line-height: 1.1;
