--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -24,16 +24,24 @@
   @import "@radix-ui/colors/red-dark.css";
 }
 
-@import url("https://rsms.me/inter/inter.css");
-
 :root {
   --shadow-color: 0deg 0% 59%;
   --font-stack-sans: "Inter", system-ui, -apple-system, BlinkMacSystemFont,
     "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
     "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
     "Segoe UI Symbol", "Noto Color Emoji";
-  --font-stack-sans-mono: SFMono-Regular, Menlo, Monaco, Consolas, "Ubuntu Mono",
+  --font-stack-mono: SFMono-Regular, Menlo, Monaco, Consolas, "Ubuntu Mono",
     "Liberation Mono", "Courier New", Courier, monospace;
+}
+
+@supports (font-variation-settings: normal) {
+  :root {
+    --font-stack-sans: "Inter var", "Inter", system-ui, -apple-system,
+      BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
+      "Open Sans", "Helvetica Neue", "Noto Sans", sans-serif,
+      "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
+      "Noto Color Emoji";
+  }
 }
 
 *,
@@ -70,12 +78,6 @@ html {
 body,
 #__next {
   height: 100%;
-}
-
-@supports (font-variation-settings: normal) {
-  html {
-    font-family: "Inter var", var(--font-stack-sans);
-  }
 }
 
 #leva__root {
