--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,28 @@
-@import url("https://rsms.me/inter/inter.css");
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer base {
+  @import "@radix-ui/colors/blue.css";
+  @import "@radix-ui/colors/crimson.css";
+  @import "@radix-ui/colors/cyan.css";
+  @import "@radix-ui/colors/gray.css";
+  @import "@radix-ui/colors/green.css";
+  @import "@radix-ui/colors/indigo.css";
+  @import "@radix-ui/colors/orange.css";
+  @import "@radix-ui/colors/plum.css";
+  @import "@radix-ui/colors/red.css";
+
+  @import "@radix-ui/colors/blue-dark.css";
+  @import "@radix-ui/colors/crimson-dark.css";
+  @import "@radix-ui/colors/cyan-dark.css";
+  @import "@radix-ui/colors/gray-dark.css";
+  @import "@radix-ui/colors/green-dark.css";
+  @import "@radix-ui/colors/indigo-dark.css";
+  @import "@radix-ui/colors/orange-dark.css";
+  @import "@radix-ui/colors/plum-dark.css";
+  @import "@radix-ui/colors/red-dark.css";
+}
 
 :root {
   --shadow-color: 0deg 0% 59%;
@@ -6,8 +30,18 @@
     "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
     "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
     "Segoe UI Symbol", "Noto Color Emoji";
-  --font-stack-sans-mono: SFMono-Regular, Menlo, Monaco, Consolas, "Ubuntu Mono",
+  --font-stack-mono: SFMono-Regular, Menlo, Monaco, Consolas, "Ubuntu Mono",
     "Liberation Mono", "Courier New", Courier, monospace;
+}
+
+@supports (font-variation-settings: normal) {
+  :root {
+    --font-stack-sans: "Inter var", "Inter", system-ui, -apple-system,
+      BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
+      "Open Sans", "Helvetica Neue", "Noto Sans", sans-serif,
+      "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
+      "Noto Color Emoji";
+  }
 }
 
 *,
@@ -44,12 +78,6 @@ html {
 body,
 #__next {
   height: 100%;
-}
-
-@supports (font-variation-settings: normal) {
-  html {
-    font-family: "Inter var", var(--font-stack-sans);
-  }
 }
 
 #leva__root {
