--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -32,9 +32,8 @@
     "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
     "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
     "Segoe UI Symbol", "Noto Color Emoji";
-  --font-stack-mono: var(--font-plex-mono), SFMono-Regular, Menlo, Monaco,
-    Consolas, "Ubuntu Mono", "Liberation Mono", "Courier New", Courier,
-    monospace;
+  --font-stack-mono: SFMono-Regular, Menlo, Monaco, Consolas, "Ubuntu Mono",
+    "Liberation Mono", "Courier New", Courier, monospace;
   font-feature-settings:
     "liga" 1,
     "calt" 1,
