--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,23 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@config '../../tailwind.config.js';
+@import "tailwindcss";
+
+/*
+  The default border color has changed to `currentColor` in Tailwind CSS v4,
+  so we've added these compatibility styles to make sure everything still
+  looks the same as it did with Tailwind CSS v3.
+
+  If we ever want to remove these styles, we need to add an explicit border
+  color utility to any element that depends on these defaults.
+*/
+@layer base {
+  *,
+  ::after,
+  ::before,
+  ::backdrop,
+  ::file-selector-button {
+    border-color: var(--color-gray-200, currentColor);
+  }
+}
 
 @layer base {
   @import "@radix-ui/colors/blue.css";
@@ -50,22 +67,8 @@
   }
 }
 
-*,
-::after,
-::before {
-  box-sizing: border-box;
-}
-
-/* https://www.smashingmagazine.com/2019/07/margins-in-css/ */
-/* https://alistapart.com/article/settingtypeontheweb/ */
-* {
-  margin: 0;
-  padding: 0;
-}
-
 html {
   font-family: var(--font-stack-sans);
-  line-height: 1.5;
 
   -webkit-tap-highlight-color: transparent;
   -webkit-font-smoothing: antialiased;
